<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <!--상단 툴바-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-14dp">

        <TextView
            android:id="@+id/tv_diary_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:letterSpacing="0.2"
            android:text="@string/diary_date"
            android:textAlignment="center"
            android:textColor="#8D6E63" />

        <ImageView
            android:id="@+id/btn_diary_options"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:contentDescription="@string/diary_option"
            app:srcCompat="@drawable/baseline_delete_24"
            tools:layout_editor_absoluteX="690dp"
            tools:layout_editor_absoluteY="8dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/line_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"
        app:layout_constraintVertical_bias="0.0">

        <com.sangwon.example.everysiheung.view.CustomImageView
            android:id="@+id/iv_photo"
            android:layout_width="371dp"
            android:layout_height="351dp"
            android:adjustViewBounds="true"
            android:background="@drawable/round_image_border"
            android:contentDescription="@string/diary_image"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_diary"
            android:layout_width="363dp"
            android:layout_height="187dp"
            android:layout_marginTop="-20dp"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/diary_text_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingLeft="20dp"
            android:textSize="@dimen/textSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_photo" />

        <ImageView
            android:id="@+id/btn_save_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/diary_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/btn_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>